--- a/principle of problem programmin'/DP.ipynb
+++ b/principle of problem programmin'/DP.ipynb
@@ -294,6 +294,91 @@
     "# 出力\n",
     "print(dp[N-1][M-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4944\\573709428.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mP\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "P = [None]*(N+1)\n",
+    "A = [None]*(N+1)\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    P[i], A[i] = map(int, input().split())\n",
+    "\n",
+    "# dp[start][end] = max(ans)\n",
+    "# dp[l][r] = dp[l-1][r]-left\n",
+    "# dp[l][r] = dp[l][r-1]-right\n",
+    "\n",
+    "dp = [[None]*(N+1) for i in range(N+1)]\n",
+    "dp[1][N] = 0\n",
+    "\n",
+    "for LEN in reversed(range(0, N-1)):\n",
+    "\tfor l in range(1, N-LEN+1):\n",
+    "\t\tr = l + LEN\n",
+    "\n",
+    "\t\t# score1 の値（l-1 番目のブロックを取り除くときの得点）を求める\n",
+    "\t\tscore1 = 0\n",
+    "\t\tif l>=2 and l<=P[l-1] and P[l-1]<=r:\n",
+    "\t\t\tscore1 = A[l-1]\n",
+    "\n",
+    "\t\t# score2 の値（r+1 番目のブロックを取り除くときの得点）を求める\n",
+    "\t\tscore2 = 0\n",
+    "\t\tif r<=N-1 and l<=P[r+1] and P[r+1]<=r:\n",
+    "\t\t\tscore2 = A[r+1]\n",
+    "\n",
+    "\t\t# dp[l][r] を求める\n",
+    "\t\tif l==1:\n",
+    "\t\t\tdp[l][r] = dp[l][r+1] + score2\n",
+    "\t\telif r==N:\n",
+    "\t\t\tdp[l][r] = dp[l-1][r] + score1\n",
+    "\t\telse:\n",
+    "\t\t\tdp[l][r] = max(dp[l-1][r] + score1, dp[l][r+1] + score2)\n",
+    "\n",
+    "# 出力\n",
+    "Answer = 0\n",
+    "for i in range(1, N+1):\n",
+    "\tAnswer = max(Answer, dp[i][i])\n",
+    "print(Answer)\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
