--- a/principle of problem programmin'/DP.ipynb
+++ b/principle of problem programmin'/DP.ipynb
@@ -356,6 +356,7 @@
     "print(Answer)\n",
     "    \n",
     "\n",
+    "\n",
     "\n"
    ]
   },
@@ -364,7 +365,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# input \n",
+    "N= int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "\n",
+    "# dp [1,N+1]\n",
+    "dp = [ -(10 ** 9) ]*(N+1)\n",
+    "# ds\n",
+    "\n",
+    "#dp[1] = 0\n",
+    "dp[1] = 0\n",
+    "\n",
+    "for i in range(1,N):\n",
+    "    dp[A[i-1]] = max(dp[A[i-1]], dp[i]+100)\n",
+    "    dp[B[i-1]] = max(dp[B[i-1]], dp[i]+150)\n",
+    "# dp[A[i]] = max(dp[A[i]], dp[i]+100)\n",
+    "# dp[B[i]] = max(dp[B[i]], dp[i]+150) \n",
+    "\n",
+    "\n",
+    " \n",
+    "ans = dp[N]\n",
+    "print(ans)\n"
+   ]
   },
   {
    "cell_type": "code",
