--- a/principle of problem programmin'/DP.ipynb
+++ b/principle of problem programmin'/DP.ipynb
@@ -395,6 +395,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 23\n",
+    "# 24\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input H, W\n",
+    "H, W = map(int, input().split())\n",
+    "\n",
+    "# string\n",
+    "S = [None]*(H)\n",
+    "\n",
+    "dp = [[0]*(W+1) for _ in range(H+1)]\n",
+    "\n",
+    "for i in range(H):\n",
+    "    S[i] = input()\n",
+    "\n",
+    "for i in range(H):\n",
+    "    for j in range(W):\n",
+    "        if i==0 and j==0:\n",
+    "            dp[i][j] = 1\n",
+    "        else:\n",
+    "            dp[i][j] = 0\n",
+    "            if i>=1 and S[i-1][j]=='.':\n",
+    "                dp[i][j]= dp[i][j]+dp[i-1][j]\n",
+    "            if j>=1 and S[i][j-1]=='.':\n",
+    "                dp[i][j]= dp[i][j]+dp[i][j-1]\n",
+    "\n",
+    "print(dp[H-1][W-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 入力（配列 c が 0 番目から始まることに注意）\n",
+    "H, W = map(int, input().split())\n",
+    "c = [ None ] * H\n",
+    "for i in range(H):\n",
+    "\tc[i] = input()\n",
+    "\n",
+    "# 動的計画法\n",
+    "dp = [ [ 0 ] * (W + 1) for i in range(H + 1) ]\n",
+    "for i in range(H):\n",
+    "\tfor j in range(W):\n",
+    "\t\tif i==0 and j==0:\n",
+    "\t\t\tdp[i][j] = 1\n",
+    "\t\telse:\n",
+    "\t\t\tdp[i][j] = 0\n",
+    "\t\t\tif i>=1 and c[i-1][j]=='.':\n",
+    "\t\t\t\tdp[i][j] += dp[i-1][j]\n",
+    "\t\t\tif j>=1 and c[i][j-1]=='.':\n",
+    "\t\t\t\tdp[i][j] += dp[i][j-1]\n",
+    "\n",
+    "# 出力\n",
+    "print(dp[H-1][W-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
