--- a/principle of problem programmin'/atcoder_contest.ipynb
+++ b/principle of problem programmin'/atcoder_contest.ipynb
@@ -177,7 +177,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "li = [3,1,4,1,5,9,2,6,5,3]\n",
+    "k = int(input())\n",
+    "print(li[k])\n",
+    "\n",
+    "# https://algo-method.com/tasks/824"
+   ]
   }
  ],
  "metadata": {
@@ -188,7 +194,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.7.13"
+   "version": "3.7.13 (default, Mar 28 2022, 08:03:21) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
