--- a/ABC210-/sample.ipynb
+++ b/ABC210-/sample.ipynb
@@ -229,6 +229,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10101\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [1,10, 100]\n",
+    "\n",
+    "T = sum(map(lambda v: v*v, A))\n",
+    "print(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = sum(map(lambda v: v*v, A))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
